--- a/src/main/resources/templates/admin/welcomeadmin.html
+++ b/src/main/resources/templates/admin/welcomeadmin.html
@@ -1,9 +1,12 @@
-<html>
- <head>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
- <body>
-  <nav class="navbar navbar-expand-lg bg-dark">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+  <title>Dashboard</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+ </head>
+<body>
+<nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/" style="color:white">Temporary Housing Assistance</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,15 +20,20 @@
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success me-2" type="submit">Search</button>
-         <button class="btn btn-primary me-2"><a href="/userregister" style="color:white;text-decoration:none;">Register</a></button>
-        <button class="btn btn-primary me-2"><a href="/userlogin" style="color:white;text-decoration:none">Login</a></button>
+        <button class="btn btn-outline-success me-2" type="submit">Search</button>       
+        <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Logout</a></button>
       </form>
     </div>
   </div>
-</nav>
-<div class="bg">
-<img src="assets/home_bg.jpg" width="100%" height="100%">
+</nav><br>
+<div class="container">
+  <h2 style="color:blue"> <p th:text="${username}"></p></h2>
+  <br>
+  <div class="card" style="width: 28rem;margin-left:30%">
+  <div class="card-body">
+     
+  </div>
 </div>
- </body>
- </html>
+</div>
+</body>
+</html>
