--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -21,7 +21,7 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
-        <button class="btn btn-primary me-2"><a href="/userregister" style="color:white;text-decoration:none">Register</a></button>
+        <button class="btn btn-primary me-2"><a href="/register" style="color:white;text-decoration:none">Register</a></button>
       </form>
     </div>
   </div>
@@ -31,7 +31,7 @@
   <br>
   <div class="card" style="width: 28rem;margin-left:30%">
   <div class="card-body">
-     <form th:action=@{/authenticateuserlogin} th:object="${user}" method="post">
+     <form th:action=@{/authenticateLogin} th:object="${user}" method="post">
      <div class="form-group">
      <input type="text" class="form-control" placeholder="Enter email"  th:field="*{email}"/>
     </div><br>
