--- a/src/main/resources/templates/home/register.html
+++ b/src/main/resources/templates/home/register.html
@@ -21,7 +21,7 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
-        <button class="btn btn-primary me-2"><a href="/userlogin" style="color:white;text-decoration:none">Login</a></button>
+        <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Login</a></button>
       </form>
     </div>
   </div>
@@ -31,7 +31,7 @@
   <br>
   <div class="card" style="width: 28rem;margin-left:30%">
   <div class="card-body">
-  <form action="#" th:action=@{/saveuser} th:object="${user}" method="post">
+  <form action="#" th:action=@{/saveUser} th:object="${user}" method="post">
     <div class="form-group">
      <input type="text" class="form-control" placeholder="Enter firstname" th:field="*{firstname}" required/>
     </div><br>
