--- a/src/main/resources/templates/houseowner/welcomehouseowner.html
+++ b/src/main/resources/templates/houseowner/welcomehouseowner.html
@@ -21,7 +21,7 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
-        <button class="btn btn-primary me-2"><a href="/userlogin" style="color:white;text-decoration:none">Logout</a></button>
+        <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Logout</a></button>
       </form>
     </div>
   </div>
