--- a/src/main/resources/templates/home/forgotpassword.html
+++ b/src/main/resources/templates/home/forgotpassword.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>User Registration</title>
+  <title>Forgot Password</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
  </head>
 <body>
@@ -27,51 +27,31 @@
   </div>
 </nav><br><br>
 <div class="container">
-  <center><h2 style="color:blue">Register Form</h2></center>
+  <center><h2 style="color:blue">Forgot Password</h2></center>
   <br>
-   <div class="col d-flex justify-content-center">
+  <div class="col d-flex justify-content-center">
   <div class="card" style="width: 28rem;">
   <div class="card-body">
-  <form action="#" th:action=@{/saveUser} th:object="${user}" method="post">
-    <div class="form-group">
-     <input type="text" class="form-control" placeholder="Enter firstname" th:field="*{firstname}" required/>
+     <form th:action=@{/validateForgotPassword} th:object="${user}" method="post">
+     <div class="form-group">
+      <div class="form-group">
+     <input type="text" class="form-control" placeholder="Enter Email ID"  th:field="*{email}"/>
     </div><br>
-    <div class="form-group">
-     <input type="text" class="form-control" placeholder="Enter lastname"  th:field="*{lastname}" required/>
-    </div><br>
-    <div class="form-group">
-     <input type="number" class="form-control" placeholder="Enter mobileNo"  th:field="*{mobileNo}" maxlength="10" required/> 
-    </div><br>
-    <div class="form-group">
-     <input type="email" class="form-control" placeholder="Enter email"  th:field="*{email}" required/>
-    </div><br>
-    <div class="form-group">
-      <input type="password" class="form-control" placeholder="Enter password"  th:field="*{password}" required/>
-    </div><br>
-    <div class="form-group">
-     <select th:field="*{usertype}" class="form-control">
-     <option th:value="null">Select User</option>
-    <option th:value="houseowner">House Owner (HO)</option>
-    <option th:value="student">Student</option>
-    </select>
-    </div><br>
-    <div class="form-group">
-    <select th:field="*{securityQuestion}" class="form-control">
+     <select th:field="*{securityQuestion}" class="form-control">
      <option th:value="null">Select your Security Question</option>
     <option th:value="birthlocation">Where is your birth location</option>
     <option th:value="god">Who is your favorite God</option>
     <option th:value="school">What is your first school name</option>
     </select>
     </div><br>
-    <div class="form-group">
+     <div class="form-group">
      <input type="text" class="form-control" placeholder="Enter Security Answer"  th:field="*{securityAnswer}"/>
     </div><br>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary">submit</button>
   </form>
-   </div>
+  </div>
 </div>
 </div>
 </div>
-
 </body>
 </html>
