--- a/src/main/resources/templates/home/forgotusername.html
+++ b/src/main/resources/templates/home/forgotusername.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>User Login</title>
+  <title>Forgot Username</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
  </head>
 <body>
@@ -21,35 +21,22 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
-        <button class="btn btn-primary me-2"><a href="/register" style="color:white;text-decoration:none">Register</a></button>
+        <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Login</a></button>
       </form>
     </div>
   </div>
 </nav><br><br>
 <div class="container">
-  <center><h2 style="color:blue">Login Form</h2></center>
+  <center><h2 style="color:blue">Forgot Username</h2></center>
   <br>
   <div class="col d-flex justify-content-center">
   <div class="card" style="width: 28rem;">
   <div class="card-body">
-     <form th:action=@{/authenticateLogin} th:object="${user}" method="post">
+     <form th:action=@{/sendMail} th:object="${user}" method="post">
      <div class="form-group">
-     <input type="text" class="form-control" placeholder="Enter email"  th:field="*{email}"/>
+     <input type="text" class="form-control" placeholder="Enter registered email id"  th:field="*{email}"/>
     </div><br>
-    <div class="form-group">
-      <input type="password" class="form-control" placeholder="Enter password"  th:field="*{password}"/>
-    </div>
-    <div class="row">
-    <div class="col-lg-6 col-md-6">
-     <a href="/forgotUsername">Forgot username</a>
-    </div>
-    <div class="col-lg-2 col-md-6">
-    </div>
-    <div class="col-lg-4 col-md-6">
-     <a href="/forgotPassword">Forgot password</a>
-    </div>
-    </div><br>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">submit</button>
   </form>
   </div>
 </div>
