--- a/src/main/resources/templates/admin/welcomeadmin.html
+++ b/src/main/resources/templates/admin/welcomeadmin.html
@@ -29,11 +29,65 @@
 <div class="container">
   <h2 style="color:blue"> <p th:text="${username}"></p></h2>
   <br>
-  <div class="card" style="width: 28rem;margin-left:30%">
-  <div class="card-body">
-     
+  
+  <div class="row">
+	  <div class="card" style="width: 15rem;margin-right:20px;">
+		  <img class="card-img-top" src="assets/spam.jpg" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Spam Users</h4>
+		    <p class="card-text">Reported By House Owner</p>
+		    <a href="#" class="btn btn-primary">See Results</a>
+		  </div>
+  	  </div>
+  	  
+  	  <div class="card" style="width:15rem;margin-right:20px;">
+		  <img class="card-img-top" src="assets/spam.jpg" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Spam Houses</h4>
+		    <p class="card-text">Reported By Users</p>
+		    <a href="#" class="btn btn-primary">See Results</a>
+		  </div>
+  	  </div>
+  	  
+  	  <div class="card" style="width: 15rem;margin-right:20px;">
+		  <img class="card-img-top" src="assets/notifications.jpg" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Post Notifications</h4>
+		    <p class="card-text">for Users</p>
+		    <a href="/notification" class="btn btn-primary">Create Now</a>
+		  </div>
+  	  </div>
+  	  
+  	  <div class="card" style="width: 15rem;margin-right:20px;">
+		  <img class="card-img-top" src="assets/announcements.png" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Post Announcements</h4>
+		    <p class="card-text">for Users</p>
+		    <a href="/announcement" class="btn btn-primary">Create Now</a>
+		  </div>
+  	  </div>
+  	  
+  	  <div class="card" style="width: 15rem;margin-right:20px;margin-top:20px;">
+		  <img class="card-img-top" src="assets/tickets.png" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Resolve Tickets</h4>
+		    <p class="card-text">Raised by Users and House Owners</p>
+		    <a href="#" class="btn btn-primary">Resolve Now</a>
+		  </div>
+  	  </div>
+  	  
+  	  <div class="card" style="width: 15rem;margin-right:20px;margin-top:20px;">
+		  <img class="card-img-top" src="assets/faq.jpg" alt="Card image">
+		  <div class="card-body">
+		    <h4 class="card-title">Update FAQ'S</h4>
+		    <p class="card-text">all FAQ'S</p>
+		    <a href="#" class="btn btn-primary">Update Now</a>
+		  </div>
+  	  </div>
   </div>
-</div>
+  
+  
+
 </div>
 </body>
 </html>
