--- a/src/main/resources/templates/home/profile.html
+++ b/src/main/resources/templates/home/profile.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>HO Dashboard</title>
+  <title>Profile</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
  </head>
@@ -15,15 +15,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <th:block th:if="${role} =='houseowner'">
-      <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/createHouse">Post House</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/viewHouses">View Houses</a>
-        </li>  
-      </th:block>
-        
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li> -->
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -44,14 +38,59 @@
   </div>
 </nav><br>
 <div class="container">
+  <center><h2 style="color:blue">Your Profile</h2></center>
   <br>
-  <div class="card" style="width: 28rem;margin-left:30%">
+   <div class="col d-flex justify-content-center">
+  <div class="card" style="width: 28rem;">
   <div class="card-body">
-       <!-- <img th:src="*{'data:image/jpeg;base64,'+ image}" /> -->
-  </div>
-</div>
-</div>
+  <form action="#" th:action=@{/updateProfile} th:object="${user}" method="post">
 
+     <input type="hidden" class="form-control" placeholder="" th:field="*{Id}" required/>
+     <div class="form-group">
+     <label>User Name</label>
+     <input type="text" class="form-control" placeholder=""  th:field="*{username}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>First Name</label>
+     <input type="text" class="form-control" placeholder="" th:field="*{firstname}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>Last Name</label>
+     <input type="text" class="form-control" placeholder=""  th:field="*{lastname}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>Mobile Number</label>
+     <input type="number" class="form-control" placeholder=""  th:field="*{mobileNo}" maxlength="10" required/> 
+    </div><br>
+     <input type="hidden" class="form-control" placeholder=""  th:field="*{email}" required/>
+      <input type="hidden" class="form-control" placeholder=""  th:field="*{password}" required/>
+      <input type="hidden" class="form-control" placeholder=""  th:field="*{usertype}" required/>
+    <div class="form-group">
+    <label>Security Question</label>
+    <select th:field="*{securityQuestion}" class="form-control">
+     <option th:value="null">Select your Security Question</option>
+    <option th:value="birthlocation">Where is your birth location</option>
+    <option th:value="god">Who is your favorite God</option>
+    <option th:value="school">What is your first school name</option>
+    </select>
+    </div><br>
+    <div class="form-group">
+    <label>Security Answer</label>
+     <input type="text" class="form-control" placeholder="Enter Security Answer"  th:field="*{securityAnswer}"/>
+    </div><br>
+    <button type="submit" class="btn btn-primary">Update Profile</button>
+    
+     <button class="btn btn-primary"><a href="/resetPassword" style="color:white;text-decoration:none">Reset Password</a></button>
+    
+  </form>
+  <br>
+  <form action="#" th:action="@{'/deleteProfile/' + ${user.Id}}" method="post">
+  <button type="submit" class="btn btn-primary">Delete Profile</button>
+   </form>
+   </div>
+</div>
+</div>
+</div>
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
