--- a/src/main/resources/templates/home/resetpassword.html
+++ b/src/main/resources/templates/home/resetpassword.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>HO Dashboard</title>
+  <title>Change Password</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
  </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-dark">
@@ -15,15 +15,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <th:block th:if="${role} =='houseowner'">
-      <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/createHouse">Post House</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/viewHouses">View Houses</a>
-        </li>  
-      </th:block>
-        
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li> -->
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -42,17 +36,27 @@
       </form>
     </div>
   </div>
-</nav><br>
+</nav><br><br>
 <div class="container">
+  <center><h2 style="color:blue">Reset Password</h2></center>
   <br>
-  <div class="card" style="width: 28rem;margin-left:30%">
+  <div class="col d-flex justify-content-center">
+  <div class="card" style="width: 28rem;">
   <div class="card-body">
-       <!-- <img th:src="*{'data:image/jpeg;base64,'+ image}" /> -->
+     <form th:action=@{/saveNewPassword} th:object="${user}" method="post">
+     <div class="form-group">
+     <input type="hidden" class="form-control"  th:value="${email}" th:field="*{email}" />
+    </div><br>
+     <div class="form-group">
+     <input type="password" class="form-control" placeholder="Enter New Password"  th:field="*{password}" autocomplete="off"/>
+    </div><br>
+    <button type="submit" class="btn btn-primary">submit</button>
+  </form>
   </div>
 </div>
 </div>
-
- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
