--- a/src/main/resources/templates/user/welcomeuser.html
+++ b/src/main/resources/templates/user/welcomeuser.html
@@ -4,6 +4,7 @@
 <head>
   <title>Dashboard</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
  </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-dark">
@@ -22,6 +23,7 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
         <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Logout</a></button>
+        <i class="bi bi-person-circle" style="color:white;font-size:30px"></i>
       </form>
     </div>
   </div>
