--- a/src/main/resources/templates/home/error.html
+++ b/src/main/resources/templates/home/error.html
@@ -21,8 +21,8 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>       
-        <button class="btn btn-primary me-2"><a href="/userregister" style="color:white;text-decoration:none">Register</a></button>
-         <button class="btn btn-primary me-2"><a href="/userlogin" style="color:white;text-decoration:none">Login</a></button>
+        <button class="btn btn-primary me-2"><a href="/register" style="color:white;text-decoration:none">Register</a></button>
+         <button class="btn btn-primary me-2"><a href="/login" style="color:white;text-decoration:none">Login</a></button>
       </form>
     </div>
   </div>
