--- a/src/main/resources/templates/home/profile.html
+++ b/src/main/resources/templates/home/profile.html
@@ -5,6 +5,16 @@
   <title>Profile</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+   <style>
+	   label{
+	   color:blue;
+	   font-weight:bold;
+	   }
+   </style>
+   <script>
+	
+   </script>
+  
  </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-dark">
@@ -38,55 +48,60 @@
   </div>
 </nav><br>
 <div class="container">
-  <center><h2 style="color:blue">Your Profile</h2></center>
-  <br>
    <div class="col d-flex justify-content-center">
   <div class="card" style="width: 28rem;">
   <div class="card-body">
-  <form action="#" th:action=@{/updateProfile} th:object="${user}" method="post">
-
-     <input type="hidden" class="form-control" placeholder="" th:field="*{Id}" required/>
-     <div class="form-group">
-     <label>User Name</label>
-     <input type="text" class="form-control" placeholder=""  th:field="*{username}" required/>
-    </div><br>
-    <div class="form-group">
-    <label>First Name</label>
-     <input type="text" class="form-control" placeholder="" th:field="*{firstname}" required/>
-    </div><br>
-    <div class="form-group">
-    <label>Last Name</label>
-     <input type="text" class="form-control" placeholder=""  th:field="*{lastname}" required/>
-    </div><br>
-    <div class="form-group">
-    <label>Mobile Number</label>
-     <input type="number" class="form-control" placeholder=""  th:field="*{mobileNo}" maxlength="10" required/> 
-    </div><br>
-     <input type="hidden" class="form-control" placeholder=""  th:field="*{email}" required/>
-      <input type="hidden" class="form-control" placeholder=""  th:field="*{password}" required/>
-      <input type="hidden" class="form-control" placeholder=""  th:field="*{usertype}" required/>
-    <div class="form-group">
-    <label>Security Question</label>
-    <select th:field="*{securityQuestion}" class="form-control">
-     <option th:value="null">Select your Security Question</option>
-    <option th:value="birthlocation">Where is your birth location</option>
-    <option th:value="god">Who is your favorite God</option>
-    <option th:value="school">What is your first school name</option>
-    </select>
-    </div><br>
-    <div class="form-group">
-    <label>Security Answer</label>
-     <input type="text" class="form-control" placeholder="Enter Security Answer"  th:field="*{securityAnswer}"/>
-    </div><br>
-    <button type="submit" class="btn btn-primary">Update Profile</button>
-    
-     <button class="btn btn-primary"><a href="/resetPassword" style="color:white;text-decoration:none">Reset Password</a></button>
-    
-  </form>
+	  <div class="row">
+		  <div class="col-lg-8">
+		  <center><h2 style="color:blue;float:right">Your Profile</h2></center>
+		  </div>
+		  <div class="col-lg-4">
+		   <form action="#" th:action="@{'/deleteProfile/' + ${user.Id}}" method="post">
+			  <button type="submit" class="btn" data-toggle="tooltip" data-placement="right" title="Delete your profile" style="float:right">
+	  			<i class="bi bi-trash3" style="color:red;font-weight:bold;font-size:20px"></i>
+			 </button>
+		   </form>
+		   </span>
+		  </div>
+	  </div><hr>
+	  <form action="#" th:action=@{/updateProfile} th:object="${user}" method="post">
+	     <input type="hidden" class="form-control" placeholder="" th:field="*{Id}" required/>
+	     <div class="form-group">
+	     <label>User Name</label>
+	     <input type="text" class="form-control" placeholder=""  th:field="*{username}" required/>
+	    </div><br>
+	    <div class="form-group">
+	    <label>First Name</label>
+	     <input type="text" class="form-control" placeholder="" th:field="*{firstname}" required/>
+	    </div><br>
+	    <div class="form-group">
+	    <label>Last Name</label>
+	     <input type="text" class="form-control" placeholder=""  th:field="*{lastname}" required/>
+	    </div><br>
+	    <div class="form-group">
+	    <label>Mobile Number</label>
+	     <input type="number" class="form-control" placeholder=""  th:field="*{mobileNo}" maxlength="10" required/> 
+	    </div><br>
+	     <input type="hidden" class="form-control" placeholder=""  th:field="*{email}" required/>
+	      <input type="hidden" class="form-control" placeholder=""  th:field="*{password}" required/>
+	      <input type="hidden" class="form-control" placeholder=""  th:field="*{usertype}" required/>
+	    <div class="form-group">
+	    <label>Security Question</label>
+	    <select th:field="*{securityQuestion}" class="form-control">
+	     <option th:value="null">Select your Security Question</option>
+	    <option th:value="birthlocation">Where is your birth location</option>
+	    <option th:value="god">Who is your favorite God</option>
+	    <option th:value="school">What is your first school name</option>
+	    </select>
+	    </div><br>
+	    <div class="form-group">
+	    <label>Security Answer</label>
+	     <input type="text" class="form-control" placeholder="Enter Security Answer"  th:field="*{securityAnswer}"/>
+	    </div><br>
+	    <button type="submit" class="btn btn-primary">Update Profile</button>
+	     <button class="btn btn-primary" style="float:right"><a href="/resetPassword" style="color:white;text-decoration:none">Reset Password</a></button>
+	  </form>
   <br>
-  <form action="#" th:action="@{'/deleteProfile/' + ${user.Id}}" method="post">
-  <button type="submit" class="btn btn-primary">Delete Profile</button>
-   </form>
    </div>
 </div>
 </div>
