--- a/src/main/resources/templates/houseowner/createhouse.html
+++ b/src/main/resources/templates/houseowner/createhouse.html
@@ -17,8 +17,17 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <th:block th:if="${role} =='houseowner'">
       <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/createHouse">Post House</a>
+          <a class="nav-link" style="color:green" aria-current="page" href="/houseowner">Home</a>
         </li>
+      <li class="nav-item">
+          <a class="nav-link active" style="color:green" aria-current="page" href="/createHouse">Post House</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" style="color:green" aria-current="page" href="/viewHouses">View Houses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color:green" aria-current="page" href="/reportStudent">Report Student</a>
+        </li>  
       </th:block>
         
       </ul>
