--- a/src/main/resources/templates/houseowner/updatehouse.html
+++ b/src/main/resources/templates/houseowner/updatehouse.html
@@ -5,7 +5,6 @@
   <title>HO Dashboard</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-   
  </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-dark">
@@ -21,14 +20,14 @@
           <a class="nav-link" style="color:green" aria-current="page" href="/houseowner">Home</a>
         </li>
       <li class="nav-item">
-          <a class="nav-link" style="color:green" aria-current="page" href="/createHouse">Post House</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link active" style="color:green" aria-current="page" href="/viewHouses">View Houses</a>
+          <a class="nav-link active" style="color:green" aria-current="page" href="/createHouse">Post House</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" style="color:green" aria-current="page" href="/viewHouses">View Houses</a>
+        </li> 
         <li class="nav-item">
           <a class="nav-link" style="color:green" aria-current="page" href="/reportStudent">Report Student</a>
-        </li>   
+        </li> 
       </th:block>
         
       </ul>
@@ -51,76 +50,74 @@
   </div>
 </nav><br>
 <div class="container">
+  <center><h2 style="color:blue">Update House</h2></center>
   <br>
-  <div class="row">
-
-<th:block th:each="house : ${houses}">
-
- 			<div class="card col-3 mt-3" style="margin:20px;">
-                <div class="card-horizontal">
-                    <div class="img-square-wrapper">
-                        <img class="" src="http://via.placeholder.com/300x180" alt="Card image cap">
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                         Name:
-     						<th:block  th:text="${house.houseName}">
-     						</th:block>
-                        </h4>
-                        <p class="card-text">
-                        Details:
-     						<th:block th:text="${house.houseDetails}">
-     						</th:block>
-                        </p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-					     <li class="list-group-item">
-					      Address:
-     						<th:block th:text="${house.houseAddress}">
-     						</th:block>
-					     </li>
-					    <li class="list-group-item"  >
-					    Contact:
-     						<th:block th:text="${house.houseContact}">
-     						</th:block>
-					    </li>
-					    <li class="list-group-item" >
-					     Mail:
-     						<th:block th:text="${house.houseOwnerMail}">
-     						</th:block>
-					    </li>
-  					</ul>
-				  <div class="card-body">
-				     <h5 class="card-title" >
-				     Rent:
-				     <th:block th:text="${house.houseRent}">
-				     </th:block>/- per month
-				     </h5>
-				    <p class="card-text">
-				    Type:
-				     <th:block  th:text="${house.houseType}">
-				     </th:block>
-				    </p>
-				  </div>
-                </div>
-                <div class="card-footer">
-                   
-	  			<a style="margin-bottom:10px;" class="btn btn-primary" th:href="@{'/editHouse/' + ${house.Id}}">Update House</a>
-			
-    				  <form action="#" th:action="@{'/deleteHouse/' + ${house.Id}}" method="post">
-			  <button type="submit" class="btn btn-danger">
-	  			Delete House
-			 </button>
-		   </form>
-                </div>
-            </div>
-
-
-</th:block> 
-
-
+   <div class="col d-flex justify-content-center">
+  <div class="card" style="width: 28rem;">
+  <div class="card-body">
+  <form action="#" th:action=@{/updateHouse} th:object="${house}" method="post" enctype="multipart/form-data">
+  
+  	<input type="hidden" class="form-control" th:field="*{Id}" required/>
+    <div class="form-group">
+    <label>Mail Id</label>
+     <input type="text" class="form-control" th:field="*{houseOwnerMail}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>Name</label>
+     <input type="text" class="form-control"  th:field="*{houseName}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>Address</label>
+     <textarea class="form-control"  th:field="*{houseAddress}" required></textarea> 
+    </div><br>
+    <div class="form-group">
+    <label>Details</label>
+     <textarea class="form-control"  th:field="*{houseDetails}" required></textarea> 
+    </div><br>
+    <div class="form-group">
+    <label>Contact</label>
+     <input type="number" class="form-control" th:field="*{houseContact}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>Rent</label>
+      <input type="number" class="form-control" th:field="*{houseRent}" required/>
+    </div><br>
+    <div class="form-group">
+    <label>House Photo</label>
+      <input type="file" class="form-control" name="image" accept="image/png, image/jpeg"/>
+    </div><br>
+    <div class="form-group">
+    <label>House Type</label>
+     <select th:field="*{houseType}" class="form-control">
+     <option th:value="null">Select House Type</option>
+    <option th:value="1bhk">1BHK</option>
+    <option th:value="2bhk">2BHK</option>
+    <option th:value="1bhk">3BHK</option>
+    <option th:value="2bhk">4BHK</option>
+    </select>
+    </div><br>
+    <div class="form-group">
+    <label>Is your House Booked?</label>
+     <select th:field="*{isBooked}" class="form-control">
+    <option th:value="0">Not Booked</option>
+    <option th:value="1">Booked</option>
+    </select>
+    </div><br>
+    
+    <div class="form-group">
+    <label>Want to Hide House?</label>
+     <select th:field="*{isHide}" class="form-control">
+    <option th:value="0">No</option>
+    <option th:value="1">Yes</option>
+    </select>
+    </div><br> 
+    <button type="submit" class="btn btn-primary">Update</button>
+  </form>
+   </div>
 </div>
 </div>
+</div>
+
 
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
